fix sticky footer issue on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,7 @@ h3 {
     border-top: 3px solid rgba(230, 230, 0, 1);
     min-height: 50px;
     display: block;
+    z-index: -5
   }
   .credit {
     margin-left: 5vw;
